# sillirc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
sillirc/: Cargo.toml  index.html
sillirc-lib/: Cargo.toml
sillirc-lib/src/: lib.rs  networker.rs  user.rs
sillirc-mini/: Cargo.toml
sillirc-mini/src/: main.rs
sillirc-server/: Cargo.toml
sillirc-server/src/: main.rs
sillirc/assets/: manifest.json  sw.js
sillirc/src/: app.rs  lib.rs  main.rs
sillirc/src/app/: network.rs
