[package]
name = "sillirc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"

sillirc-lib = { path = "../sillirc-lib" }

[lints]
workspace = true