[package]
name = "sillirc"
version = "0.1.0"
authors = ["OwOmay <238maculo238@gmail.com>"]
edition = "2024"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sillirc-lib = { path = "../sillirc-lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#getrandom = { version = "0.3.4", features = ["wasm_js"] }
#tokio-tungstenite-wasm = "0.6.0"
#wasm-bindgen-futures = "0.4.54"
#web-sys = "0.3.81"

[lints]
workspace = true